--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,10 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Temp or development files
+test.ipynb
+README_*.md
+.neptune/
+*_experiments.ipynb
+*_DEV/
